--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
   "author": "mcMickJuice <mikejoyce19@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "webpack-dev-server --config ./webpack.config.js --open",
-    "build": "webpack --config ./webpack.config.js",
+    "start:watch": "webpack-dev-server --config ./webpack.config.js --open",
+    "build": "set NODE_ENV=production&&webpack --config ./webpack.config.js",
     "lint": "eslint **/*.js"
+  },
+  "engines": {
+    "node": "8.0.0"
   },
   "pre-commit": [
     "lint"
