--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "start:watch": "webpack-dev-server --config ./webpack.config.js --open",
     "build": "set NODE_ENV=production&&webpack --config ./webpack.config.js",
+    "heroku-postbuild": "npm run build",
     "lint": "eslint **/*.js"
   },
   "engines": {
