--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
   "author": "mcMickJuice <mikejoyce19@gmail.com>",
   "license": "MIT",
   "scripts": {
+    "start": "node ./server",
     "start:watch": "webpack-dev-server --config ./webpack.config.js --open",
     "build": "set NODE_ENV=production&&webpack --config ./webpack.config.js",
     "heroku-postbuild": "npm run build",
     "lint": "eslint **/*.js"
   },
   "engines": {
-    "node": "8.0.0"
+    "node": "7.x"
   },
   "pre-commit": [
     "lint"
@@ -24,6 +25,7 @@
     "webpack-dev-server": "^2.5.0"
   },
   "dependencies": {
+    "express": "^4.15.3",
     "football-query-compiler": "^0.1.1",
     "webpack": "^3.0.0"
   }
